# RetinaLake

./: .env.example  .gitignore  .gitmodules  LICENSE  NOTICE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.sh
chaksudb/: __init__.py
chaksudb/common/: __init__.py  dictionary.py  progress.py
chaksudb/config/: config.py
chaksudb/db/: __init__.py  connection.py  models.py
chaksudb/export/: __init__.py  api.py  caption_engine.py  coco_export.py  contrastive_dataset.py  discovery.py  parquet_export.py  parquet_schema.py  parquet_sink.py  path_resolution.py  presets.py  query_builder.py  row_type.py  spec.py  streaming.py  torch_dataset.py
chaksudb/storage/: __init__.py  locators.py  paths.py
docs/: README.md  architecture.md
docs/data/: 01_EYEPACS.md  02_MESSIDOR.md  03_IDRID.md  04_RFMid.md  05_1000x39.md  06_DeepEyeNet.md  07_LAG_database.md  08_ODIR5K.md  09_PAPILA.md  10_Paraguay.md  11_STARE.md  12_ARIA.md  13_FIVES.md  14_AGAR_300.md  15_APTOS.md  16_FUND-OCT.md  17_DiaRetDB1.md  18_DRIONS-DB.md  19_Drishti-GS1.md  20_E-ophta.md  21_G1020.md  22_HEI-MED.md  23_HRF.md  24_ORIGA_light.md  25_REFUGE.md  26_ROC.md  27_BRSET.md  28_OIA-DDR.md  29_AIROGS.md  31_JICHI.md  (+10 more)
examples/: README.md  dr_grade_filtering.py  export_classification_concepts.py  export_classification_pivoted.py  export_coco_detection.py  export_dataset_flat.py  export_example.py  export_fundus_descriptions.py  export_keyword.py  export_multidisease_zeroshot_baseline.py  export_normal_roi_iqa.py  export_seg_parquets.py  export_with_presets.py  export_with_transforms.py  print_export_query.py  ssl_export.py
schema/: reset_db.sql  schema.sql
scripts/: assign_splits.py  bootstrap_dictionary_vocab.py  bootstrap_grading_scales.py  export_builder.py  find_duplicate_images.py  serve.py  setup_full_database.py  verify_torch_export.py
tests/: conftest.py  test_config.py  test_db_connection.py  test_grading_processor.py  test_ingestion_helpers_comprehensive.py  test_scale_bootstrap_comprehensive.py  test_segmentation_processor.py  test_split_and_patient_comprehensive.py
(+198 files in other folders)
