[project]
name = "RetinaLake"
version = "1.1.0"
description = "A unified PostgreSQL schema and export toolkit for 50+ ophthalmic imaging datasets."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Anirudh H A" }]
keywords = [
    "ophthalmology",
    "medical-imaging",
    "fundus",
    "retina",
    "diabetic-retinopathy",
    "glaucoma",
    "dataset",
    "pytorch",
    "postgresql",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "chardet>=5.2.0",
    "efficientnet-pytorch>=0.7.1",
    "gradio>=6.14.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.90",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pillow>=12.1.0",
    "psycopg-pool>=3.3.0",
    "psycopg[pool]>=3.3.2",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/anirudhamar04/RetinaLake"
Repository = "https://github.com/anirudhamar04/RetinaLake"
Issues = "https://github.com/anirudhamar04/RetinaLake/issues"

[dependency-groups]
dev = [
    "bump-pydantic>=0.8.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "sqlparse>=0.5.5",
]
gpu = [
    "cupy-cuda12x>=13.6.0",
    "nvidia-cuda-nvrtc-cu12>=12.1.105",
    "nvidia-cuda-runtime-cu12>=12.1.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["chaksudb"]


